// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdvancedSearchField component should render \`autocomplete\` field 1`] = `
Array [
  <select
    className="advanced-search__logic"
    onChange={[Function]}
  >
    <option
      value="AND"
    >
      AND
    </option>
    <option
      value="OR"
    >
      OR
    </option>
    <option
      value="NOT"
    >
      NOT
    </option>
  </select>,
  <div
    className="dropdown-container"
  >
    <button
      className="button dropdown"
      onClick={[Function]}
      type="button"
    >
      Select
    </button>
    <div
      className="dropdown-menu"
    >
      <ul
        className=""
      />
    </div>
  </div>,
  <div
    className="advanced-search__inputs"
  >
    <label
      htmlFor="input_ec"
    >
      Enzyme classification [EC]
      <input
        id="input_ec"
        onChange={[Function]}
        placeholder="1.1.2.3"
        type="text"
      />
    </label>
  </div>,
]
`;

exports[`AdvancedSearchField component should render \`date\` field 1`] = `
Array [
  <select
    className="advanced-search__logic"
    onChange={[Function]}
  >
    <option
      value="AND"
    >
      AND
    </option>
    <option
      value="OR"
    >
      OR
    </option>
    <option
      value="NOT"
    >
      NOT
    </option>
  </select>,
  <div
    className="dropdown-container"
  >
    <button
      className="button dropdown"
      onClick={[Function]}
      type="button"
    >
      Select
    </button>
    <div
      className="dropdown-menu"
    >
      <ul
        className=""
      />
    </div>
  </div>,
  <div
    className="advanced-search__inputs"
  >
    <label
      htmlFor="from_input_created"
    >
      From
      <input
        id="from_input_created"
        onChange={[Function]}
        placeholder="0"
        type="date"
      />
    </label>
    <label
      htmlFor="to_input_created"
    >
      To
      <input
        id="to_input_created"
        onChange={[Function]}
        placeholder="100"
        type="date"
      />
    </label>
  </div>,
]
`;

exports[`AdvancedSearchField component should render \`enum\` field 1`] = `
Array [
  <select
    className="advanced-search__logic"
    onChange={[Function]}
  >
    <option
      value="AND"
    >
      AND
    </option>
    <option
      value="OR"
    >
      OR
    </option>
    <option
      value="NOT"
    >
      NOT
    </option>
  </select>,
  <div
    className="dropdown-container"
  >
    <button
      className="button dropdown"
      onClick={[Function]}
      type="button"
    >
      Select
    </button>
    <div
      className="dropdown-menu"
    >
      <ul
        className=""
      />
    </div>
  </div>,
  <div
    className="advanced-search__inputs"
  >
    <label
      htmlFor="select_existence"
    >
      Protein Existence [PE]
      <select
        id="select_existence"
        onChange={[Function]}
      >
        <option
          value="1"
        >
          Evidence at protein level
        </option>
        <option
          value="2"
        >
          Evidence at transcript level
        </option>
      </select>
    </label>
  </div>,
]
`;

exports[`AdvancedSearchField component should render \`evidence\` field 1`] = `
Array [
  <select
    className="advanced-search__logic"
    onChange={[Function]}
  >
    <option
      value="AND"
    >
      AND
    </option>
    <option
      value="OR"
    >
      OR
    </option>
    <option
      value="NOT"
    >
      NOT
    </option>
  </select>,
  <div
    className="dropdown-container"
  >
    <button
      className="button dropdown"
      onClick={[Function]}
      type="button"
    >
      Select
    </button>
    <div
      className="dropdown-menu"
    >
      <ul
        className=""
      />
    </div>
  </div>,
  <div
    className="advanced-search__inputs"
  >
    <label
      htmlFor="input_cofactor_chebi"
    >
      ChEBI term
      <input
        id="input_cofactor_chebi"
        onChange={[Function]}
        placeholder="29105"
        type="text"
      />
    </label>
  </div>,
  <div
    className="advanced-search__inputs"
  >
    <label
      htmlFor="evidence_select"
    >
      Evidence
      <select
        id="evidence_select"
        onChange={[Function]}
        value=""
      />
    </label>
  </div>,
]
`;

exports[`AdvancedSearchField component should render \`range\` field 1`] = `
Array [
  <select
    className="advanced-search__logic"
    onChange={[Function]}
  >
    <option
      value="AND"
    >
      AND
    </option>
    <option
      value="OR"
    >
      OR
    </option>
    <option
      value="NOT"
    >
      NOT
    </option>
  </select>,
  <div
    className="dropdown-container"
  >
    <button
      className="button dropdown"
      onClick={[Function]}
      type="button"
    >
      Select
    </button>
    <div
      className="dropdown-menu"
    >
      <ul
        className=""
      />
    </div>
  </div>,
  <div
    className="advanced-search__inputs"
  >
    <label
      htmlFor="input_sites"
    >
      Any
      <input
        id="input_sites"
        onChange={[Function]}
        placeholder="translocation"
        type="text"
      />
    </label>
  </div>,
  <div
    className="advanced-search__inputs"
  >
    <label
      htmlFor="from_input_sites"
    >
      From
      <input
        id="from_input_sites"
        onChange={[Function]}
        placeholder="0"
        type="number"
      />
    </label>
    <label
      htmlFor="to_input_sites"
    >
      To
      <input
        id="to_input_sites"
        onChange={[Function]}
        placeholder="100"
        type="number"
      />
    </label>
  </div>,
]
`;

exports[`AdvancedSearchField component should render \`string\` field 1`] = `
Array [
  <select
    className="advanced-search__logic"
    onChange={[Function]}
  >
    <option
      value="AND"
    >
      AND
    </option>
    <option
      value="OR"
    >
      OR
    </option>
    <option
      value="NOT"
    >
      NOT
    </option>
  </select>,
  <div
    className="dropdown-container"
  >
    <button
      className="button dropdown"
      onClick={[Function]}
      type="button"
    >
      Select
    </button>
    <div
      className="dropdown-menu"
    >
      <ul
        className=""
      />
    </div>
  </div>,
  <div
    className="advanced-search__inputs"
  >
    <label
      htmlFor="input_accession"
    >
      UniProtKB AC
      <input
        id="input_accession"
        onChange={[Function]}
        placeholder="P12345"
        type="text"
      />
    </label>
  </div>,
]
`;
